--- a/app/src/main/res/layout/fragment_5.xml
+++ b/app/src/main/res/layout/fragment_5.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    tools:context=".Fragment5Activity">
+    tools:context=".fragment_5">
 
     <TextView
         android:id="@+id/textView6"
